--- a/app/src/main/res/layout-land/activity_main.xml
+++ b/app/src/main/res/layout-land/activity_main.xml
@@ -180,31 +180,68 @@
                 android:id="@+id/digitseno"
                 android:layout_width="wrap_content"
                 android:onClick="funcionEspecial"
-                android:text="@string/btnseno" />
+                android:text="@string/btnseno"
+                android:layout_row="0"
+                android:layout_column="0" />
             <Button
                 android:id="@+id/digitcoseno"
                 android:layout_width="wrap_content"
                 android:onClick="funcionEspecial"
                 android:text="@string/btncoseno"
-                />
+                android:layout_row="0"
+                android:layout_column="1" />
             <Button
                 android:id="@+id/digittangente"
                 android:layout_width="wrap_content"
                 android:onClick="funcionEspecial"
-                android:text="@string/btntangente" />
+                android:text="@string/btntangente"
+                android:layout_row="1"
+                android:layout_column="0" />
 
 
             <Button
                 android:id="@+id/digitraiz"
                 android:layout_width="wrap_content"
                 android:onClick="funcionEspecial"
-                android:text="@string/btnraiz" />
+                android:text="@string/btnraiz"
+                android:layout_row="1"
+                android:layout_column="1" />
 
             <Button
                 android:id="@+id/digitpotencia"
                 android:layout_width="wrap_content"
+                android:onClick="obtenerDigito"
+                android:text="@string/btnpotencia"
+                android:layout_row="2"
+                android:layout_column="0" />
+
+            <Button
+                android:id="@+id/digitfactorial"
+                android:layout_width="wrap_content"
                 android:onClick="funcionEspecial"
-                android:text="@string/btnpotencia" />
+                android:text="@string/btnfactorial"
+                android:layout_height="wrap_content"
+                android:layout_row="2"
+                android:layout_column="1" />
+
+            <Button
+                android:id="@+id/digitpi"
+                android:layout_width="wrap_content"
+                android:onClick="obtenerDigito"
+                android:text="@string/btnpi"
+                android:layout_height="wrap_content"
+                android:layout_row="3"
+                android:layout_column="0"
+                />
+
+            <Button
+                android:id="@+id/digite"
+                android:layout_width="wrap_content"
+                android:onClick="obtenerDigito"
+                android:text="@string/btne"
+                android:layout_height="wrap_content"
+                android:layout_row="3"
+                android:layout_column="1" />
         </GridLayout>
 
     </LinearLayout>
