--- a/app/src/main/res/layout-land/activity_main.xml
+++ b/app/src/main/res/layout-land/activity_main.xml
@@ -29,7 +29,7 @@
         <GridLayout
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:background="#545658"
+            android:background="@color/colorFondoCalcCientificaNumeros"
             android:columnCount="3">
 
 
@@ -37,18 +37,24 @@
                 android:id="@+id/digit7"
                 android:layout_width="wrap_content"
                 android:onClick="obtenerDigito"
+                android:background="@color/colorFondoCalcCientificaNumeros"
+                android:textColor="@color/colorLetrasTeclas"
                 android:text="@string/btn7" />
 
             <Button
                 android:id="@+id/digit8"
                 android:layout_width="wrap_content"
                 android:onClick="obtenerDigito"
+                android:background="@color/colorFondoCalcCientificaNumeros"
+                android:textColor="@color/colorLetrasTeclas"
                 android:text="@string/btn8" />
 
             <Button
                 android:id="@+id/digit9"
                 android:layout_width="wrap_content"
                 android:onClick="obtenerDigito"
+                android:background="@color/colorFondoCalcCientificaNumeros"
+                android:textColor="@color/colorLetrasTeclas"
                 android:text="@string/btn9" />
 
 
@@ -56,17 +62,23 @@
                 android:id="@+id/digit4"
                 android:layout_width="wrap_content"
                 android:onClick="obtenerDigito"
+                android:background="@color/colorFondoCalcCientificaNumeros"
+                android:textColor="@color/colorLetrasTeclas"
                 android:text="@string/btn4" />
 
             <Button
                 android:id="@+id/digit5"
                 android:onClick="obtenerDigito"
                 android:layout_width="wrap_content"
+                android:background="@color/colorFondoCalcCientificaNumeros"
+                android:textColor="@color/colorLetrasTeclas"
                 android:text="@string/btn5" />
 
             <Button
                 android:id="@+id/digit6"
                 android:layout_width="wrap_content"
+                android:background="@color/colorFondoCalcCientificaNumeros"
+                android:textColor="@color/colorLetrasTeclas"
                 android:onClick="obtenerDigito"
                 android:text="@string/btn6" />
 
@@ -75,18 +87,24 @@
             <Button
                 android:id="@+id/digit1"
                 android:layout_width="wrap_content"
+                android:background="@color/colorFondoCalcCientificaNumeros"
+                android:textColor="@color/colorLetrasTeclas"
                 android:onClick="obtenerDigito"
                 android:text="@string/btn1" />
 
             <Button
                 android:id="@+id/digit2"
                 android:layout_width="wrap_content"
+                android:background="@color/colorFondoCalcCientificaNumeros"
+                android:textColor="@color/colorLetrasTeclas"
                 android:onClick="obtenerDigito"
                 android:text="@string/btn2" />
 
             <Button
                 android:id="@+id/digit3"
                 android:layout_width="wrap_content"
+                android:background="@color/colorFondoCalcCientificaNumeros"
+                android:textColor="@color/colorLetrasTeclas"
                 android:onClick="obtenerDigito"
                 android:text="@string/btn3" />
 
@@ -94,6 +112,8 @@
             <Button
                 android:id="@+id/digit."
                 android:layout_width="wrap_content"
+                android:background="@color/colorFondoCalcCientificaNumeros"
+                android:textColor="@color/colorLetrasTeclas"
                 android:onClick="obtenerDigito"
                 android:text="@string/btnpunto" />
 
@@ -101,6 +121,8 @@
                 android:id="@+id/digit0"
                 android:layout_width="wrap_content"
                 android:layout_gravity="fill_horizontal"
+                android:background="@color/colorFondoCalcCientificaNumeros"
+                android:textColor="@color/colorLetrasTeclas"
                 android:onClick="obtenerDigito"
                 android:text="@string/btn0" />
 
@@ -108,6 +130,8 @@
             <Button
                 android:id="@+id/digitigual"
                 android:layout_width="wrap_content"
+                android:background="@color/colorFondoCalcCientificaNumeros"
+                android:textColor="@color/colorLetrasTeclas"
                 android:layout_gravity="fill_horizontal"
                 android:text="@string/btnigual" />
 
@@ -118,22 +142,25 @@
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:orientation="horizontal"
-            android:background="#a3a4a6"
+            android:background="@color/colorFondoCalcCientificaOper"
             android:columnCount="2">
 
             <Button
                 android:id="@+id/digitmas"
                 android:layout_width="wrap_content"
                 android:onClick="obtenerDigito"
+                android:background="@color/colorFondoCalcCientificaOper"
                 android:text="@string/btnsuma" />
             <Button
                 android:id="@+id/digitdel"
                 android:layout_width="wrap_content"
+                android:background="@color/colorFondoCalcCientificaOper"
                 android:text="@string/btndel"
                 />
             <Button
                 android:id="@+id/digitmenos"
                 android:layout_width="wrap_content"
+                android:background="@color/colorFondoCalcCientificaOper"
                 android:onClick="obtenerDigito"
                 android:text="@string/btnresta" />
 
@@ -141,22 +168,25 @@
 
 
                 android:layout_width="wrap_content"
+                android:background="@color/colorFondoCalcCientificaOper"
                 android:text="" />
 
 
             <Button
                 android:id="@+id/digitpor"
                 android:layout_width="wrap_content"
+                android:background="@color/colorFondoCalcCientificaOper"
                 android:onClick="obtenerDigito"
                 android:text="@string/btnmultiplicacion" />
             <Button
-
+                android:background="@color/colorFondoCalcCientificaOper"
 
                 android:layout_width="wrap_content"
                 android:text="" />
             <Button
                 android:id="@+id/digitdividido"
                 android:layout_width="wrap_content"
+                android:background="@color/colorFondoCalcCientificaOper"
                 android:onClick="obtenerDigito"
                 android:text="@string/btndivision" />
 
@@ -164,6 +194,7 @@
                 android:id="@+id/digitclear"
                 android:layout_width="wrap_content"
                 android:layout_gravity="fill_horizontal"
+                android:background="@color/colorFondoCalcCientificaOper"
                 android:text="@string/btnc"
                 android:onClick="clear"/>
         </GridLayout>
@@ -173,13 +204,14 @@
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:orientation="horizontal"
-            android:background="#0fe48f"
+            android:background="@color/colorFondoCalcCientificaEspeciales"
             android:columnCount="2">
 
             <Button
                 android:id="@+id/digitseno"
                 android:layout_width="wrap_content"
                 android:onClick="funcionEspecial"
+                android:background="@color/colorFondoCalcCientificaEspeciales"
                 android:text="@string/btnseno"
                 android:layout_row="0"
                 android:layout_column="0" />
@@ -187,6 +219,7 @@
                 android:id="@+id/digitcoseno"
                 android:layout_width="wrap_content"
                 android:onClick="funcionEspecial"
+                android:background="@color/colorFondoCalcCientificaEspeciales"
                 android:text="@string/btncoseno"
                 android:layout_row="0"
                 android:layout_column="1" />
@@ -194,6 +227,7 @@
                 android:id="@+id/digittangente"
                 android:layout_width="wrap_content"
                 android:onClick="funcionEspecial"
+                android:background="@color/colorFondoCalcCientificaEspeciales"
                 android:text="@string/btntangente"
                 android:layout_row="1"
                 android:layout_column="0" />
@@ -203,6 +237,7 @@
                 android:id="@+id/digitraiz"
                 android:layout_width="wrap_content"
                 android:onClick="funcionEspecial"
+                android:background="@color/colorFondoCalcCientificaEspeciales"
                 android:text="@string/btnraiz"
                 android:layout_row="1"
                 android:layout_column="1" />
@@ -211,6 +246,7 @@
                 android:id="@+id/digitpotencia"
                 android:layout_width="wrap_content"
                 android:onClick="obtenerDigito"
+                android:background="@color/colorFondoCalcCientificaEspeciales"
                 android:text="@string/btnpotencia"
                 android:layout_row="2"
                 android:layout_column="0" />
@@ -219,6 +255,7 @@
                 android:id="@+id/digitfactorial"
                 android:layout_width="wrap_content"
                 android:onClick="funcionEspecial"
+                android:background="@color/colorFondoCalcCientificaEspeciales"
                 android:text="@string/btnfactorial"
                 android:layout_height="wrap_content"
                 android:layout_row="2"
@@ -228,6 +265,7 @@
                 android:id="@+id/digitpi"
                 android:layout_width="wrap_content"
                 android:onClick="obtenerDigito"
+                android:background="@color/colorFondoCalcCientificaEspeciales"
                 android:text="@string/btnpi"
                 android:layout_height="wrap_content"
                 android:layout_row="3"
@@ -240,6 +278,7 @@
                 android:onClick="obtenerDigito"
                 android:text="@string/btne"
                 android:layout_height="wrap_content"
+                android:background="@color/colorFondoCalcCientificaEspeciales"
                 android:layout_row="3"
                 android:layout_column="1" />
         </GridLayout>
