--- a/app/src/main/res/layout-xlarge/activity_main.xml
+++ b/app/src/main/res/layout-xlarge/activity_main.xml
@@ -40,7 +40,8 @@
                 android:onClick="obtenerDigito"
                 android:text="@string/btn7"
                 android:textSize="@dimen/keysize"
-                android:background="#545658"/>
+                android:background="@color/colorFondoCalcCientificaNumeros"
+                android:textColor="@color/colorLetrasTeclas"/>
 
             <Button
                 android:id="@+id/digit8"
@@ -48,7 +49,8 @@
                 android:onClick="obtenerDigito"
                 android:text="@string/btn8"
                 android:textSize="@dimen/keysize"
-                android:background="#545658"/>
+                android:background="@color/colorFondoCalcCientificaNumeros"
+                android:textColor="@color/colorLetrasTeclas"/>
 
             <Button
                 android:id="@+id/digit9"
@@ -56,7 +58,8 @@
                 android:onClick="obtenerDigito"
                 android:text="@string/btn9"
                 android:textSize="@dimen/keysize"
-                android:background="#545658"/>
+                android:background="@color/colorFondoCalcCientificaNumeros"
+                android:textColor="@color/colorLetrasTeclas"/>
 
 
             <Button
@@ -65,7 +68,8 @@
                 android:onClick="obtenerDigito"
                 android:text="@string/btn4"
                 android:textSize="@dimen/keysize"
-                android:background="#545658"/>
+                android:background="@color/colorFondoCalcCientificaNumeros"
+                android:textColor="@color/colorLetrasTeclas"/>
 
             <Button
                 android:id="@+id/digit5"
@@ -73,7 +77,8 @@
                 android:layout_width="wrap_content"
                 android:text="@string/btn5"
                 android:textSize="@dimen/keysize"
-                android:background="#545658"/>
+                android:background="@color/colorFondoCalcCientificaNumeros"
+                android:textColor="@color/colorLetrasTeclas"/>
 
             <Button
                 android:id="@+id/digit6"
@@ -81,7 +86,8 @@
                 android:onClick="obtenerDigito"
                 android:text="@string/btn6"
                 android:textSize="@dimen/keysize"
-                android:background="#545658"/>
+                android:background="@color/colorFondoCalcCientificaNumeros"
+                android:textColor="@color/colorLetrasTeclas"/>
 
 
 
@@ -91,7 +97,8 @@
                 android:onClick="obtenerDigito"
                 android:text="@string/btn1"
                 android:textSize="@dimen/keysize"
-                android:background="#545658"/>
+                android:background="@color/colorFondoCalcCientificaNumeros"
+                android:textColor="@color/colorLetrasTeclas"/>
 
             <Button
                 android:id="@+id/digit2"
@@ -99,7 +106,8 @@
                 android:onClick="obtenerDigito"
                 android:text="@string/btn2"
                 android:textSize="@dimen/keysize"
-                android:background="#545658"/>
+                android:background="@color/colorFondoCalcCientificaNumeros"
+                android:textColor="@color/colorLetrasTeclas"/>
 
             <Button
                 android:id="@+id/digit3"
@@ -107,7 +115,8 @@
                 android:onClick="obtenerDigito"
                 android:text="@string/btn3"
                 android:textSize="@dimen/keysize"
-                android:background="#545658"/>
+                android:background="@color/colorFondoCalcCientificaNumeros"
+                android:textColor="@color/colorLetrasTeclas"/>
 
 
             <Button
@@ -116,7 +125,8 @@
                 android:onClick="obtenerDigito"
                 android:text="@string/btnpunto"
                 android:textSize="@dimen/keysize"
-                android:background="#545658"/>
+                android:background="@color/colorFondoCalcCientificaNumeros"
+                android:textColor="@color/colorLetrasTeclas"/>
 
             <Button
                 android:id="@+id/digit0"
@@ -125,7 +135,8 @@
                 android:onClick="obtenerDigito"
                 android:text="@string/btn0"
                 android:textSize="@dimen/keysize"
-                android:background="#545658"/>
+                android:background="@color/colorFondoCalcCientificaNumeros"
+                android:textColor="@color/colorLetrasTeclas"/>
 
 
             <Button
@@ -134,7 +145,8 @@
                 android:layout_gravity="fill_horizontal"
                 android:text="@string/btnigual"
                 android:textSize="@dimen/keysize"
-                android:background="#545658"/>
+                android:background="@color/colorFondoCalcCientificaNumeros"
+                android:textColor="@color/colorLetrasTeclas"/>
 
         </GridLayout>
 
@@ -143,7 +155,7 @@
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:orientation="horizontal"
-            android:background="#a3a4a6"
+            android:background="@color/colorFondoCalcCientificaOper"
             android:columnCount="2">
 
             <Button
@@ -152,13 +164,13 @@
                 android:onClick="obtenerDigito"
                 android:text="@string/btnsuma"
                 android:textSize="@dimen/keysize"
-                android:background="#a3a4a6"/>
+                android:background="@color/colorFondoCalcCientificaOper"/>
             <Button
                 android:id="@+id/digitdel"
                 android:layout_width="wrap_content"
                 android:text="@string/btndel"
                 android:textSize="@dimen/keysize"
-                android:background="#a3a4a6"
+                android:background="@color/colorFondoCalcCientificaOper"
                 />
             <Button
                 android:id="@+id/digitmenos"
@@ -166,7 +178,7 @@
                 android:onClick="obtenerDigito"
                 android:text="@string/btnresta"
                 android:textSize="@dimen/keysize"
-                android:background="#a3a4a6"/>
+                android:background="@color/colorFondoCalcCientificaOper"/>
 
             <Button
 
@@ -174,7 +186,7 @@
                 android:layout_width="wrap_content"
                 android:text=""
                 android:textSize="@dimen/keysize"
-                android:background="#a3a4a6"/>
+                android:background="@color/colorFondoCalcCientificaOper"/>
 
 
             <Button
@@ -183,19 +195,19 @@
                 android:onClick="obtenerDigito"
                 android:text="@string/btnmultiplicacion"
                 android:textSize="@dimen/keysize"
-                android:background="#a3a4a6"/>
+                android:background="@color/colorFondoCalcCientificaOper"/>
             <Button
                 android:layout_width="wrap_content"
                 android:text=""
                 android:textSize="@dimen/keysize"
-                android:background="#a3a4a6"/>
+                android:background="@color/colorFondoCalcCientificaOper"/>
             <Button
                 android:id="@+id/digitdividido"
                 android:layout_width="wrap_content"
                 android:onClick="obtenerDigito"
                 android:text="@string/btndivision"
                 android:textSize="@dimen/keysize"
-                android:background="#a3a4a6"/>
+                android:background="@color/colorFondoCalcCientificaOper"/>
 
             <Button
                 android:id="@+id/digitclear"
@@ -204,7 +216,7 @@
                 android:text="@string/btnc"
                 android:onClick="clear"
                 android:textSize="@dimen/keysize"
-                android:background="#a3a4a6"/>
+                android:background="@color/colorFondoCalcCientificaOper"/>
         </GridLayout>
 
 
@@ -212,7 +224,7 @@
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:orientation="horizontal"
-            android:background="#0fe48f"
+            android:background="@color/colorFondoCalcCientificaEspeciales"
             android:columnCount="2"
             android:gravity="center">
 
@@ -225,7 +237,7 @@
                 android:layout_column="0"
                 android:textSize="@dimen/keysize"
                 android:layout_gravity="center_horizontal"
-                android:background="#0fe48f"/>
+                android:background="@color/colorFondoCalcCientificaEspeciales"/>
             <Button
                 android:id="@+id/digitcoseno"
                 android:layout_width="wrap_content"
@@ -234,7 +246,7 @@
                 android:layout_row="0"
                 android:layout_column="1"
                 android:textSize="@dimen/keysize"
-                android:background="#0fe48f"
+                android:background="@color/colorFondoCalcCientificaEspeciales"
                 />
             <Button
                 android:id="@+id/digittangente"
@@ -245,7 +257,7 @@
                 android:layout_column="0"
                 android:textSize="@dimen/keysize"
                 android:layout_gravity="center_horizontal"
-                android:background="#0fe48f"/>
+                android:background="@color/colorFondoCalcCientificaEspeciales"/>
 
 
             <Button
@@ -257,7 +269,7 @@
                 android:layout_column="1"
                 android:textSize="@dimen/keysize"
                 android:layout_gravity="center_horizontal"
-                android:background="#0fe48f"
+                android:background="@color/colorFondoCalcCientificaEspeciales"
                 />
 
             <Button
@@ -269,7 +281,7 @@
                 android:layout_column="0"
                 android:textSize="@dimen/keysize"
                 android:layout_gravity="center_horizontal"
-                android:background="#0fe48f"/>
+                android:background="@color/colorFondoCalcCientificaEspeciales"/>
 
             <Button
                 android:id="@+id/digitfactorial"
@@ -281,7 +293,7 @@
                 android:layout_column="1"
                 android:textSize="@dimen/keysize"
                 android:layout_gravity="center_horizontal"
-                android:background="#0fe48f"
+                android:background="@color/colorFondoCalcCientificaEspeciales"
 
                 />
 
@@ -295,7 +307,7 @@
                 android:layout_column="0"
                 android:textSize="@dimen/keysize"
                 android:layout_gravity="center_horizontal"
-                android:background="#0fe48f"
+                android:background="@color/colorFondoCalcCientificaEspeciales"
                 />
 
             <Button
@@ -308,7 +320,7 @@
                 android:layout_column="1"
                 android:textSize="@dimen/keysize"
                 android:layout_gravity="center_horizontal"
-                android:background="#0fe48f"/>
+                android:background="@color/colorFondoCalcCientificaEspeciales"/>
         </GridLayout>
 
     </LinearLayout>
