--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,7 +10,7 @@
     <GridLayout
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
-        android:background="#03A9F4"
+        android:background="@color/fondoCalcNormal"
         android:columnCount="4">
 
         <TextView
@@ -33,96 +33,111 @@
             android:id="@+id/digit7"
             android:layout_width="wrap_content"
             android:onClick="obtenerDigito"
+            android:background="@color/fondoCalcNormal"
+            android:textColor="@color/colorLetrasTeclas"
             android:text="@string/btn7" />
 
         <Button
             android:id="@+id/digit8"
             android:layout_width="wrap_content"
-
             android:onClick="obtenerDigito"
+            android:background="@color/fondoCalcNormal"
+            android:textColor="@color/colorLetrasTeclas"
             android:text="@string/btn8" />
 
         <Button
             android:id="@+id/digit9"
             android:layout_width="wrap_content"
-
             android:onClick="obtenerDigito"
+            android:background="@color/fondoCalcNormal"
+            android:textColor="@color/colorLetrasTeclas"
             android:text="@string/btn9" />
 
         <Button
             android:id="@+id/digitmas"
             android:layout_width="wrap_content"
-
+            android:background="@color/fondoCalcNormal"
+            android:textColor="@color/colorLetrasTeclas"
             android:onClick="obtenerDigito"
             android:text="@string/btnsuma" />
 
         <Button
             android:id="@+id/digit4"
             android:layout_width="wrap_content"
-
+            android:background="@color/fondoCalcNormal"
+            android:textColor="@color/colorLetrasTeclas"
             android:onClick="obtenerDigito"
             android:text="@string/btn4" />
 
         <Button
             android:id="@+id/digit5"
             android:layout_width="wrap_content"
-
+            android:background="@color/fondoCalcNormal"
+            android:textColor="@color/colorLetrasTeclas"
             android:onClick="obtenerDigito"
             android:text="@string/btn5" />
 
         <Button
             android:id="@+id/digit6"
             android:layout_width="wrap_content"
-
+            android:background="@color/fondoCalcNormal"
+            android:textColor="@color/colorLetrasTeclas"
             android:onClick="obtenerDigito"
             android:text="@string/btn6" />
 
         <Button
             android:id="@+id/digitmenos"
             android:layout_width="wrap_content"
-
+            android:background="@color/fondoCalcNormal"
+            android:textColor="@color/colorLetrasTeclas"
             android:onClick="obtenerDigito"
             android:text="@string/btnresta" />
 
         <Button
             android:id="@+id/digit1"
             android:layout_width="wrap_content"
-
+            android:background="@color/fondoCalcNormal"
+            android:textColor="@color/colorLetrasTeclas"
             android:onClick="obtenerDigito"
             android:text="@string/btn1" />
 
         <Button
             android:id="@+id/digit2"
             android:layout_width="wrap_content"
-
+            android:background="@color/fondoCalcNormal"
+            android:textColor="@color/colorLetrasTeclas"
             android:onClick="obtenerDigito"
             android:text="@string/btn2" />
 
         <Button
             android:id="@+id/digit3"
             android:layout_width="wrap_content"
-
+            android:background="@color/fondoCalcNormal"
+            android:textColor="@color/colorLetrasTeclas"
             android:onClick="obtenerDigito"
             android:text="@string/btn3" />
 
         <Button
             android:id="@+id/digitpor"
             android:layout_width="wrap_content"
-
+            android:background="@color/fondoCalcNormal"
+            android:textColor="@color/colorLetrasTeclas"
             android:onClick="obtenerDigito"
             android:text="@string/btnmultiplicacion" />
 
         <Button
             android:id="@+id/digit."
             android:layout_width="wrap_content"
-
+            android:background="@color/fondoCalcNormal"
+            android:textColor="@color/colorLetrasTeclas"
             android:onClick="obtenerDigito"
             android:text="@string/btnpunto" />
 
         <Button
             android:id="@+id/digit0"
             android:layout_width="wrap_content"
-
+            android:background="@color/fondoCalcNormal"
+            android:textColor="@color/colorLetrasTeclas"
             android:layout_columnSpan="2"
             android:layout_gravity="fill_horizontal"
             android:onClick="obtenerDigito"
@@ -131,14 +146,16 @@
         <Button
             android:id="@+id/digitdividido"
             android:layout_width="wrap_content"
-
+            android:background="@color/fondoCalcNormal"
+            android:textColor="@color/colorLetrasTeclas"
             android:onClick="obtenerDigito"
             android:text="@string/btndivision" />
 
         <Button
             android:id="@+id/digitigual"
             android:layout_width="wrap_content"
-
+            android:background="@color/fondoCalcNormal"
+            android:textColor="@color/colorLetrasTeclas"
             android:layout_columnSpan="2"
             android:layout_gravity="fill_horizontal"
             android:text="@string/btnigual"
@@ -146,7 +163,8 @@
         <Button
             android:id="@+id/digitdel"
             android:layout_width="wrap_content"
-
+            android:background="@color/fondoCalcNormal"
+            android:textColor="@color/colorLetrasTeclas"
             android:layout_gravity="fill_horizontal"
             android:text="@string/btndel"
            />
@@ -154,7 +172,8 @@
         <Button
             android:id="@+id/digitclear"
             android:layout_width="wrap_content"
-
+            android:background="@color/fondoCalcNormal"
+            android:textColor="@color/colorLetrasTeclas"
             android:layout_gravity="fill_horizontal"
             android:text="C"
             android:onClick="clear"/>
